# ipdps26-ifum-academy

./: .gitignore  .pre-commit-config.yaml  IFUM_pipeline.ipynb  README.md  config.py  ifum_calibrate.py  ifum_hexagonify.py  ifum_maskopt.py  ifum_rectify.py  ifum_stack.py  ifum_stitch.py  ifum_utils.py  parsl_py38.yml  pyproject.toml  run.py  submission.sh
ifum_agent/: config.py  parsl.py  run.py
ifum_agent/agents/: alignment.py
ifum_agent/tasks/: __init__.py  calibrate.py  cosmic_ray.py  helper.py  hexagonify.py  maskopt.py  rectify.py  stitch.py  utils.py
ifum_pkg/: pyproject.toml
ifum_pkg/ifum/: __init__.py  calibrate.py  config.py  helper.py  maskopt.py  rectify.py  stack.py  stitch.py  utils.py
ifum_pkg/ifum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ifum_pkg/ifum/ifum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run_local.sh  submission_midway.sh
testing/: fixture.py
testing/data/: 0721_blue_trace_fits.npz  0722_blue_trace_fits.npz  0724_blue_mask_data.npz  0724_blue_trace_fits.npz  0725_blue_trace_fits.npz
tests/: conftest.py  test_rectify.py  test_spectra.py
